<resources>
    <string name="app_name">Order Food</string>
    <string name="authorize">Developed by Hai Nguyen</string>
    <string name="main_activity_Login">Login</string>
    <string name="main_activity_txt_User">User Name</string>
    <string name="main_activity_txt_Password">Password</string>
    <string name="main_activity_btn_Login">Login</string>
    <string name="main_activity_notHaveAccount">Not have account?<u> Create now</u></string>
    <string name="signin_activity_edt_user_Hint">Name</string>
    <string name="signin_activity_edt_user_Password">Password</string>
    <string name="signin_activity_edt_user_ConfirmPassword">Comfirm Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_menu">Menu</string>
    <string name="navigation_menu_manage">Staff Management</string>
    <string name="navigation_menu_analyze">Analyze</string>
    <string name="navigation_menu_setting">Setting</string>
    <string name="navigation_menu_about">About</string>
    <string name="item_menu_add_table">Add Table</string>
    <string name="item_menu_table_name">Table Name</string>
    <string name="add_table_btn_confirm">Confirm</string>
    <string name="menu_activity_title">Menu</string>
    <string name="menu_activity_edt_name">Name</string>
    <string name="menu_activity_edt_cost">Cost</string>
    <string name="menu_activity_btn_confirm">Confirm</string>
    <string name="menu_activity_btn_cancel">Cancel</string>
    <string name="item_menu_add_menu">Add Menu</string>
    <string name="kind_of_food_edt">Kind Of Food</string>
    <string name="kind_of_food_btn">Confirm</string>
</resources>
