<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home"
            android:title="@string/navigation_menu_home"/>

        <item
            android:id="@+id/menu_menu"
            android:icon="@drawable/menu"
            android:title="@string/navigation_menu_menu"/>

        <item
            android:id="@+id/menu_staff"
            android:icon="@drawable/staff"
            android:title="@string/navigation_menu_manage" />

        <item android:id="@+id/menu_analyze"
            android:icon="@drawable/analyze"
            android:title="@string/navigation_menu_analyze"/>

        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/setting"
            android:title="@string/navigation_menu_setting"/>

        <item android:id="@+id/menu_about"
            android:icon="@drawable/about"
            android:title="@string/navigation_menu_about" />

    </group>
</menu>