<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:fontFamily="@font/pacificoregular"
            android:textColor="#FFF"
            android:textSize="40sp"/>


        <EditText
            android:id="@+id/edt_signIn_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/signin_activity_edt_user_Hint" />


        <EditText
            android:id="@+id/edt_signIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/signin_activity_edt_user_Password" />


        <EditText
            android:id="@+id/edt_confirm_Pasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/baloo"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/signin_activity_edt_user_ConfirmPassword"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Account"
            android:onClick="CreateAccount"
            android:fontFamily="@font/baloo"/>

        <TextView
            android:id="@+id/txt_return_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Already a member? Login"
            android:gravity="center"
            android:textSize="16dip"
            android:onClick="ReturnLogin"
            android:fontFamily="@font/baloo"
            android:textColor="#FFF"/>

    </LinearLayout>

</ScrollView>