<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:animateLayoutChanges="true"
    tools:context=".Activities.Log_In"
    android:background="@drawable/gradient_bg"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >

        <TextView
            android:id="@+id/greeting_App"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="Order Food"
            android:fontFamily="@font/pacificoregular"
            android:textColor="#FFF"
            android:textSize="40sp"
            />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/greeting_App"
            >

            <TextView
                android:id="@+id/txt_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:layout_marginTop="20dp"
                android:textColor="#FFF"
                android:text="@string/main_activity_Login"
                android:textSize="30dp"
                android:layout_centerHorizontal="false"/>

            <LinearLayout
                android:id="@+id/line1"
                android:layout_below="@+id/txt_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_activity_txt_User"
                        android:fontFamily="@font/baloo"
                        android:textAllCaps="true"
                        android:textSize="15dp"
                        android:textColor="#FFF"/>

                    <EditText
                        android:id="@+id/edt_userName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="#FFF"
                        android:fontFamily="@font/baloo"
                        android:background="@drawable/edt_bg"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_activity_txt_Password"
                        android:fontFamily="@font/baloo"
                        android:textAllCaps="true"
                        android:textSize="15dp"
                        android:textColor="#FFF"/>

                    <EditText
                        android:id="@+id/edt_userPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="#FFF"
                        android:fontFamily="@font/baloo"
                        android:background="@drawable/edt_bg"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:inputType="textPassword"
                        android:textSize="15dp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/line1"
                android:layout_marginTop="50dp"
                android:text="Login Now"
                android:textAllCaps="false"
                android:background="@drawable/btn_bg"
                android:textColor="#FFF"
                android:fontFamily="@font/baloo"
                android:textSize="16dp"
                android:onClick="Login"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_notHaveAccount"
                android:layout_below="@+id/btn_Login"
                android:textColor="#FFF"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:layout_centerHorizontal="true"
                android:onClick="Create"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>